vioif_start() - do not call virtio_enqueue_abort() after error from virtio_enqueue_reserve(), as it's already done by the latter, so we ended up with a kind of "double free" that messed up out free list of vq_entry's.

This is even documented in a "typical usage" comment in virtio.c (and
those quotes are not intended to be sarcastic).

PR 51132 - virtio net device stuck for UDP burst transmission